update endpoint register & soft delete
